# python-project-83

./: .env-sample  .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: all_test.yml
page_analyzer/: app.py  db.py  parser.py  url.py  validation.py
page_analyzer/templates/: base.html  header.html  index.html  url.html  urls.html
tests/: conftest.py  test_first.py
